@@ -8,6 +8,7 @@
  432387 0.128 crash / memory corruption (Jeremy, Pav Lucistnik)
  432289 sometimes queued tasks never decode (Calin)
  419199 wrap should not be mandatory (Bill Baker)
+ 348445 can't select multiple groups (Artur Jachacy)
  090594 add option to always spawn editor when composign (Gauze)
 
 0.128 "SR/CL: Leitmotiv: Toynbee Idea"
